fixed delete button not removing location message, added get new gifs button

--- a/localWeather/style.css
+++ b/localWeather/style.css
@@ -18,6 +18,10 @@ li {
 	font-size: 1.25rem;
 }
 
+#query {
+    width: 300px;
+}
+
 @media (min-width: 1200px) {
     .container{
         max-width: 970px;
