--- a/randomQuoteGenerator/style.css
+++ b/randomQuoteGenerator/style.css
@@ -1,5 +1,5 @@
 html { 
-  background: url(01860_sanfrancisco_2560x1600.jpg) no-repeat center center fixed; 
+  background: url(https://s13.postimg.org/6rtcm4j47/01860_sanfrancisco_2560x1600.jpg) no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
