--- a/thankYouPage/css/style.css
+++ b/thankYouPage/css/style.css
@@ -1,5 +1,5 @@
 html { 
-  background: url(../mark-solarski-209233-unsplash.jpg) no-repeat center center fixed; 
+  background: url(https://s13.postimg.org/ekk0edcbb/mark-solarski-209233-unsplash.jpg) no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
