--- a/randomQuoteGenerator/style.css
+++ b/randomQuoteGenerator/style.css
@@ -1,11 +1,3 @@
-html { 
-  background: url(https://s13.postimg.org/4p8p7anvr/01860_sanfrancisco_2560x1600-min.jpg) no-repeat center center fixed; 
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-}
-
 .quote-card {
   position: absolute;
   top: 0px;
@@ -24,6 +16,33 @@ html {
   bottom: 1%;
   margin-left: 55%;
   z-index: 10;  
+}
+
+#bg {
+  position: fixed; 
+  top: -50%; 
+  left: -50%; 
+  width: 200%; 
+  height: 200%;
+}
+#bg img {
+  position: absolute; 
+  top: 0; 
+  left: 0; 
+  right: 0; 
+  bottom: 0; 
+  margin: auto; 
+  min-width: 50%;
+  min-height: 50%;
+}
+
+img {
+  opacity: 1;
+  transition: opacity 0.3s;
+}
+
+img[data-src] {
+	opacity: 0;
 }
 
 @media screen and (max-width: 1024px) { 
