--- a/randomQuoteGenerator/style.css
+++ b/randomQuoteGenerator/style.css
@@ -5,6 +5,7 @@
   padding-top: 10%;
   padding-left: 5%;
   z-index: 10;
+  opacity: 0;
 }
 
 .card {
@@ -16,6 +17,7 @@
   bottom: 1%;
   margin-left: 55%;
   z-index: 10;  
+  opacity: 0;
 }
 
 #bg {
