--- a/wikipediaViewer/styles.css
+++ b/wikipediaViewer/styles.css
@@ -63,3 +63,50 @@ a {
   cursor: pointer;
 }
 
+li {
+  list-style: none;
+}
+
+.tabLinks {
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: space-around;
+}
+
+.tabLink {
+  position: relative;
+	display: inline-block;
+	padding: 5px 15px 0 15px;
+	margin: 0 10px;
+}
+
+.tabLink::before {
+  content: ''; /* To generate the box */
+	position: absolute;
+	top: 0; right: 0; bottom: 0; left: 0;
+	z-index: -1;
+	background: skyblue;
+	transform: perspective(2px) rotateX(2deg);
+  border-radius: 4px 4px 0 0;
+}
+
+.tabContent {
+  width: 100%;
+  height:  100px;
+  opacity: 0;
+  background-color: darkturquoise;
+  transition: all 0.5s;
+}
+
+.slide-left {
+  transform: translateX(-100%);
+}
+
+.slide-right {
+  transform: translateX(100%);
+}
+
+.center {
+  opacity: 1;
+  transform: translateX(0%);
+}
