--- a/wikipediaViewer/styles.css
+++ b/wikipediaViewer/styles.css
@@ -1,11 +1,16 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
-	margin: 0;
+  margin: 0;
   min-height: 100vh;
 	background: #134E5E;  /* fallback for old browsers */
   background: -webkit-linear-gradient(215deg, #71B280, #134E5E);  /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(215deg, #71B280, #134E5E); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   font-family: 'Slabo 27px', serif;
   color: #fafafa;
+  overflow: hidden;
 }
 
 header {
@@ -29,23 +34,26 @@ input {
 }
 
 button {
-	font-size: 1.2rem;
-
+  font-size: 1.2rem;
+  
 	color: #FFF;
 	background-color: #407FC7;
-
+  
 	border: none;
 	border-radius: 3px;
-
+  
 	padding: 8px 32px;
-	cursor: pointer;
+  cursor: pointer;
+  transition: all ease 0.3s;
 }
 
 a:hover, button:hover {
+  transition: all ease 0.3s;
 	background-color: #76AEED;
 }
 
 a:active, button:active {
+  transition: all ease 0.3s;
 	background-color: cornflowerblue;
 }
 
@@ -61,6 +69,7 @@ a {
 
   padding: 9px 42px;
   cursor: pointer;
+  transition: all ease 0.3s;  
 }
 
 #tabLinks {
@@ -69,23 +78,11 @@ a {
   justify-content: space-around;
 }
 
-#tabContents {
-  overflow: hidden;
-  position: relative;
-}
-
-.tabContent {
-  position: relative;
-  height: 200px;
-  opacity: 0;
-  background-color: darkturquoise;
-  transition: all 0.5s;
-}
-
 .tabLink {
   position: relative;
-	padding: 5px 15px 0 15px;
-	margin: 0 10px;
+  font-size: 1.2rem;  
+	padding: 10px 15px 0 15px;
+	margin: 0 20px;
 }
 
 .tabLink::before {
@@ -99,21 +96,38 @@ a {
 }
 
 .hover {
-  transform: scale(1.05);
+  transition: all 0.3s;
 }
 
 .selected {
-  transform: scale(1.1);
+  transition: all 0.3s;  
 }
 
 .hover::before {
-  transform: perspective(2px) rotateX(2deg) scale(1.05);
+  background-color: #76AEED;
+  transform: perspective(2px) rotateX(2deg);
+  transition: all 0.3s;
 }
 .selected::before {
-  background-color: lightskyblue;
-  transform: perspective(2px) rotateX(2deg) scale(1.1);
+  background-color: cornflowerblue;
+  transform: perspective(2px) rotateX(2deg);
+  transition: all 0.3s;
 }
 
+#tabContents {
+  overflow: hidden;
+}
+
+.tabContent {
+  position: absolute;
+  left: 0px;
+  width: 100%;
+  opacity: 0.5;
+  -webkit-transition: all 500ms cubic-bezier(0.785, 0.135, 0.150, 0.860);
+     -moz-transition: all 500ms cubic-bezier(0.785, 0.135, 0.150, 0.860);
+       -o-transition: all 500ms cubic-bezier(0.785, 0.135, 0.150, 0.860);
+          transition: all 500ms cubic-bezier(0.785, 0.135, 0.150, 0.860); /* easeInOutCirc */
+}
 .slide-left {
   transform: translateX(-100%);
 }
@@ -127,12 +141,16 @@ a {
   transform: translateX(0%);
 }
 
-#tabContent1 {
-  background-color: red;
+iframe {
+  border: 3px solid cornflowerblue;
+  border-radius: 3px;
+  width: 100%;
 }
-#tabContent2 {
-  background-color: green;
-}
-#tabContent3 {
-  background-color: blue;
+
+.visitPage {
+  position: absolute;
+  margin: 5px;
+  
+  right: 30px;
+  bottom: 30px;
 }
