--- a/wikipediaViewer/styles.css
+++ b/wikipediaViewer/styles.css
@@ -16,14 +16,14 @@ body {
 
 header {
   display: flex;
-  flex-flow: row wrap;
+  flex-flow: wrap;
   align-items: center;
   justify-content: space-around;
 }
 
 h1 {
   font-style: italic;
-  font-size: 3rem;
+  font-size: 3.25rem;
 }
 
 input {
@@ -31,7 +31,7 @@ input {
 	border: 1px solid #D6D9DC;
 	border-radius: 3px;
 	padding: 7px;
-	font-size: 1.2rem;
+	font-size: 1.1rem;
 }
 
 button {
@@ -43,7 +43,7 @@ button {
 	border: none;
 	border-radius: 3px;
   
-	padding: 8px 32px;
+	padding: 8px 15px;
   cursor: pointer;
   transition: all ease 0.3s;
 }
@@ -60,7 +60,7 @@ a:active, button:active {
 
 a {
   text-decoration: none;
-  font-size: 1.2rem;
+  font-size: 1.1rem;
 
   color: #fff;
   background-color: darkturquoise;
@@ -68,22 +68,27 @@ a {
   border: none;
   border-radius: 3px;
 
-  padding: 9px 42px;
+  padding: 9px 16px;
   cursor: pointer;
   transition: all ease 0.3s;  
+}
+
+#tabs {
+  opacity: 0;
+  transition: all ease 1s;
 }
 
 #tabLinks {
   display: flex;
   flex-wrap: nowrap;
-  justify-content: space-around;
+  justify-content: center;
 }
 
 .tabLink {
   position: relative;
-  font-size: 1.2rem;  
-	padding: 10px 15px 0 15px;
-	margin: 0 20px;
+  font-size: 1.05rem;  
+	padding: 10px 15px 5px 15px;
+  margin: 0 2px;
 }
 
 .tabLink::before {
@@ -92,7 +97,6 @@ a {
 	top: 0; right: 0; bottom: 0; left: 0;
 	z-index: -1;
 	background: darkturquoise;
-	transform: perspective(2px) rotateX(2deg);
   border-radius: 4px 4px 0 0;
 }
 
@@ -106,12 +110,10 @@ a {
 
 .hover::before {
   background-color: #76AEED;
-  transform: perspective(2px) rotateX(2deg);
   transition: all 0.3s;
 }
 .selected::before {
   background-color: cornflowerblue;
-  transform: perspective(2px) rotateX(2deg);
   transition: all 0.3s;
 }
 
@@ -146,6 +148,7 @@ iframe {
   border: 3px solid cornflowerblue;
   border-radius: 3px;
   width: 100%;
+  transition: all ease 0.3s;    
 }
 
 .visitPage {
@@ -154,4 +157,16 @@ iframe {
   
   right: 20px;
   bottom: 15px;
+}
+
+#errorMessage {
+  text-align: center;
+  font-size: 1.2rem;
+  padding: 5px;
+  margin-left: 33%;
+  width: 400px;
+  background-color: darkturquoise;
+  border-radius: 5px;
+  opacity: 0;
+  transition: all ease 0.5s;
 }
