--- a/wikipediaViewer/styles.css
+++ b/wikipediaViewer/styles.css
@@ -159,14 +159,17 @@ iframe {
   bottom: 15px;
 }
 
-#errorMessage {
+#messageContainer {
+  z-index: -1;
+  position: absolute;
   text-align: center;
   font-size: 1.2rem;
   padding: 5px;
+  top: 30%;
   margin-left: 33%;
   width: 400px;
   background-color: darkturquoise;
   border-radius: 5px;
   opacity: 0;
-  transition: all ease 0.5s;
+  transition: all ease 0.3s;
 }
