--- a/wikipediaViewer/styles.css
+++ b/wikipediaViewer/styles.css
@@ -19,6 +19,8 @@ header {
   flex-flow: wrap;
   align-items: center;
   justify-content: space-around;
+  align-content: center;
+  height: 70px;
 }
 
 h1 {
@@ -75,7 +77,7 @@ a {
 
 #tabs {
   opacity: 0;
-  transition: all ease 1s;
+  transition: all ease 0.5s;
 }
 
 #tabLinks {
@@ -123,6 +125,10 @@ a {
 
 .tabContent {
   position: absolute;
+  border-top: 3px solid cornflowerblue;
+  border-left: 3px solid cornflowerblue;
+  border-right: 3px solid cornflowerblue;
+  border-radius: 0 0 3px 3px;
   left: 0px;
   width: 100%;
   opacity: 0.5;
@@ -145,31 +151,53 @@ a {
 }
 
 iframe {
-  border: 3px solid cornflowerblue;
-  border-radius: 3px;
   width: 100%;
-  transition: all ease 0.3s;    
+  transition: all ease 1s;
+  background-color: darkturquoise;  
+  border-right: none;
+  border-left: none;
+  border-top: none;
+  border-bottom: 3px solid cornflowerblue;
+  border-radius: 0 0 3px 3px;
+  opacity: 0;
 }
 
 .visitPage {
   position: absolute;
   margin: 5px;
-  
   right: 20px;
   bottom: 15px;
 }
 
 #messageContainer {
-  z-index: -1;
-  position: absolute;
-  text-align: center;
-  font-size: 1.2rem;
-  padding: 5px;
-  top: 30%;
-  margin-left: 33%;
-  width: 400px;
-  background-color: darkturquoise;
-  border-radius: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   opacity: 0;
   transition: all ease 0.3s;
+  height: 30px;
+  margin-bottom: 10px;
+}
+
+#message {
+  background-color: darkturquoise;
+  font-size: 1.2rem;
+  padding: 3px 10px;
+  border-radius: 5px;
+}
+
+.tabDescriptionContainer {
+  background-color: darkturquoise;
+  width: 100%;
+  text-align: center;
+  border-bottom: 2px solid cornflowerblue;
+}
+
+.tabDescription {
+  width: 80%;
+  padding: 5px 0;
+  margin: 0 auto;
+  color: white;
+  text-align: center;
+  font-size: 1.2rem;
 }
