--- a/thankYouPage/css/style.css
+++ b/thankYouPage/css/style.css
@@ -13,7 +13,7 @@ html {
 }
 
 #toPortfolio {
-  font-size: .9rem;
+  font-size: 1.1rem;
 }
 
 #photoCred {
@@ -24,7 +24,7 @@ html {
   color: white;
   text-decoration: none;
   padding :4px 6px;
-  font-size: 12px;
+  font-size: 1.1rem;
   font-weight: bold;
   line-height: 1.2;
   display: inline-block;
