--- a/tributePage/style.css
+++ b/tributePage/style.css
@@ -1,5 +1,6 @@
 body {
   margin-top: 30px;
+  overflow-x: hidden;
 }
 
 .main-background {
@@ -17,4 +18,12 @@ body {
 
 .quote {
   font-size: 22px;
+}
+
+li {
+  font-size: 16px;
+}
+
+p {
+  font-size: 14px;
 }
