--- a/twitchTV/style.css
+++ b/twitchTV/style.css
@@ -58,3 +58,20 @@ span {
 .results {
   white-space: normal;
 }
+
+html, body {
+  height: 100%;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+}
+
+#content {
+  flex: 1 0 auto;
+}
+
+#footer {
+  flex-shrink: 0;
+}
