--- a/calculator/style.css
+++ b/calculator/style.css
@@ -1,5 +1,176 @@
 * {
 	margin: 0;
 	padding: 0;
-	box-sizing: border-box;
+  box-sizing: border-box;
+  letter-spacing: 1px;
+  font-family: 'Cabin', sans-serif;
+  font-size: 1.05rem;
+}
+
+#bg img {
+  position: fixed; 
+  top: 0; 
+  left: 0; 
+  right: 0; 
+  bottom: 0; 
+  margin: auto; 
+  min-width: 100%;
+  min-height: 100%;
+}
+
+img {
+  opacity: 1;
+  -webkit-transition: opacity 0.3s;
+  -o-transition: opacity 0.3s;
+  transition: opacity 0.3s;
+}
+
+.content {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+.calculatorContainer {
+  flex: 1 0 auto;
+  margin-top: 100px;
+  margin-left: 120px;
+}
+
+.footer {
+  flex-shrink: 0;
+  display: flex;
+  justify-content: flex-start;
+  margin-bottom: 25px;
+}
+
+.buttonDefault {
+  color: white;
+  text-align: center;
+  padding: 4px 8px;
+  margin: 10px 20px;
+  display: inline-block;
+  transition: all 100ms;
+}
+
+.slanted {
+  -ms-transform: skewX(-20deg);
+  -webkit-transform: skewX(-20deg);
+  transform: skewX(-20deg);
+  transition: all 100ms;  
+}
+
+.slantedContent {
+  -ms-transform: skewX(20deg);
+  -webkit-transform: skewX(20deg);
+  transform: skewX(20deg);  
+  display: inline-block;
+  transition: all 100ms;  
+}
+
+.link {
+  color: white;
+  text-decoration: none;
+}
+
+.bot-left { 
+  position: relative; 
+}
+.bot-left:before, .bot-left:after { 
+  content: ""; 
+  position: absolute; 
+  bottom: -1px; 
+  left: -1px; 
+} 
+
+.bot-left:before { 
+  top: -1px; 
+  width: 3px; 
+  background-image: -webkit-linear-gradient(transparent, white 60%); 
+  background-image: -moz-linear-gradient(transparent, white 60%); 
+  background-image: -o-linear-gradient(transparent, white 60%); 
+} 
+
+.bot-left:after { 
+  right: -1px; 
+  height: 3px; 
+  background-image: -webkit-linear-gradient(left, white 60%, transparent); 
+  background-image: -moz-linear-gradient(left, white 60%, transparent); 
+  background-image: -o-linear-gradient(left, white 60%, transparent); 
+}
+
+
+.calcButton {
+  width: 20px;
+  font-size: 1.3rem;
+}
+
+.calcButtonContainer {
+  cursor: pointer;
+}
+
+.doubleWidth {
+  width: 100px;
+}
+
+#clearContainer {
+  margin-left: 100px;
+}
+
+#display {
+  width: 265px;
+}
+
+.buttonDefaultActive {
+  color: lightslategrey;
+  text-align: center;
+  padding: 4px 8px;
+  margin: 10px 20px;
+  display: inline-block;
+  transition: all 100ms;  
+}
+
+.slantedActive {
+  -ms-transform: skewX(-18deg) translate(1px, -1px);
+  -webkit-transform: skewX(-18deg) translate(1px, -1px);
+  transform: skewX(-18deg) translate(1px, -1px);
+  transition: all 100ms;
+}
+
+.slantedContentActive {
+  -ms-transform: skewX(18deg);
+  -webkit-transform: skewX(18deg);
+  transform: skewX(18deg);  
+  display: inline-block;
+  transition: all 100ms;
+}
+
+.active { 
+  position: relative; 
+}
+.active:before, .active:after { 
+  content: ""; 
+  position: absolute; 
+  bottom: -1px; 
+  left: -1px; 
+} 
+
+.active:before { 
+  top: -1px; 
+  width: 3px; 
+  background-image: -webkit-linear-gradient(transparent, lightslategrey 60%);  
+  background-image: -moz-linear-gradient(transparent, lightslategrey 60%); 
+  background-image: -o-linear-gradient(transparent, lightslategrey 60%); 
+} 
+
+.active:after { 
+  right: -1px; 
+  height: 3px; 
+  background-image: -webkit-linear-gradient(left, lightslategrey 60%, transparent); 
+  background-image: -moz-linear-gradient(left, lightslategrey 60%, transparent); 
+  background-image: -o-linear-gradient(left, lightslategrey 60%, transparent); 
+}
+
+a:active {
+  color: lightslategrey;
 }
