--- a/calculator/style.css
+++ b/calculator/style.css
@@ -7,6 +7,17 @@
   font-size: 1.05rem;
 }
 
+#bg:after {
+  content:"";
+  display:block;
+  width:100%;
+  height:100%;
+  background-color:rgba(0,0,0,0.4);
+  position:absolute;
+  top:0;
+  left:0;
+}
+
 #bg img {
   position: fixed; 
   top: 0; 
@@ -16,6 +27,7 @@
   margin: auto; 
   min-width: 100%;
   min-height: 100%;
+  z-index: -1;
 }
 
 img {
@@ -32,6 +44,10 @@ img {
 }
 
 .calculatorContainer {
+  -webkit-user-select: none;
+  -moz-user-select: -moz-none;
+  -ms-user-select: none;
+  user-select: none;
   flex: 1 0 auto;
   margin-top: 100px;
   margin-left: 120px;
@@ -48,7 +64,7 @@ img {
   color: white;
   text-align: center;
   padding: 4px 8px;
-  margin: 10px 20px;
+  margin: 10px 15px;
   display: inline-block;
   transition: all 100ms;
 }
@@ -114,18 +130,18 @@ img {
 }
 
 #clearContainer {
-  margin-left: 100px;
+  margin-left: 80px;
 }
 
 #display {
-  width: 265px;
+  width: 245px;
 }
 
 .buttonDefaultActive {
   color: lightslategrey;
   text-align: center;
   padding: 4px 8px;
-  margin: 10px 20px;
+  margin: 10px 15px;
   display: inline-block;
   transition: all 100ms;  
 }
@@ -173,4 +189,38 @@ img {
 
 a:active {
   color: lightslategrey;
+}
+
+
+@media screen and (max-width:550px) {
+  #bg img {
+    left: -50px; 
+  }
+  .calculatorContainer {
+    flex: 1 0 auto;
+    margin-top: 10px;
+    margin-left: 12px;
+  }
+  
+  .footer {
+    flex-shrink: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-left: 15px;
+  }
+
+  .buttonDefault {
+    margin: 10px 10px;
+  }
+
+  .buttonDefaultActive {
+    margin: 10px 10px;
+  }
+  #clearContainer {
+    margin-left: 50px;
+  }
+  #display {
+    width: 215px;
+  }
 }
