--- a/calculator/style.css
+++ b/calculator/style.css
@@ -56,8 +56,10 @@ img {
 .footer {
   flex-shrink: 0;
   display: flex;
-  justify-content: flex-start;
-  margin-bottom: 25px;
+  flex-direction: column;
+  align-items: flex-start;
+  margin-left: 135px;
+  margin-bottom: 15px;
 }
 
 .buttonDefault {
@@ -203,10 +205,6 @@ a:active {
   }
   
   .footer {
-    flex-shrink: 0;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
     margin-left: 15px;
   }
 
