--- a/calculator/style.css
+++ b/calculator/style.css
@@ -8,14 +8,16 @@
 }
 
 #bg:after {
-  content:"";
+  position:fixed;
   display:block;
-  width:100%;
-  height:100%;
+  content:"";
+  min-width: 100%;
+  min-height: 100%;
   background-color:rgba(0,0,0,0.4);
-  position:absolute;
   top:0;
   left:0;
+  right: 0;
+  bottom: 0;
 }
 
 #bg img {
@@ -128,7 +130,7 @@ img {
 }
 
 .doubleWidth {
-  width: 100px;
+  width: 92px;
 }
 
 #clearContainer {
@@ -215,10 +217,12 @@ a:active {
   .buttonDefaultActive {
     margin: 10px 10px;
   }
-  #clearContainer {
-    margin-left: 50px;
-  }
+
   #display {
     width: 215px;
+  }
+
+  .doubleWidth {
+    width: 82px;
   }
 }
