--- a/calculator/style.css
+++ b/calculator/style.css
@@ -71,6 +71,7 @@ img {
   margin: 10px 15px;
   display: inline-block;
   transition: all 100ms;
+  z-index: 5;
 }
 
 .slanted {
@@ -85,7 +86,8 @@ img {
   -webkit-transform: skewX(20deg);
   transform: skewX(20deg);  
   display: inline-block;
-  transition: all 100ms;  
+  transition: all 100ms; 
+  z-index: 3; 
 }
 
 .link {
