--- a/calculator/style.css
+++ b/calculator/style.css
@@ -64,63 +64,10 @@ img {
   margin-bottom: 15px;
 }
 
-.buttonDefault {
-  color: white;
-  text-align: center;
-  padding: 4px 8px;
-  margin: 10px 15px;
-  display: inline-block;
-  transition: all 100ms;
-  z-index: 5;
-}
-
-.slanted {
-  -ms-transform: skewX(-20deg);
-  -webkit-transform: skewX(-20deg);
-  transform: skewX(-20deg);
-  transition: all 100ms;  
-}
-
-.slantedContent {
-  -ms-transform: skewX(20deg);
-  -webkit-transform: skewX(20deg);
-  transform: skewX(20deg);  
-  display: inline-block;
-  transition: all 100ms; 
-  z-index: 3; 
-}
-
 .link {
   color: white;
   text-decoration: none;
 }
-
-.bot-left { 
-  position: relative; 
-}
-.bot-left:before, .bot-left:after { 
-  content: ""; 
-  position: absolute; 
-  bottom: -1px; 
-  left: -1px; 
-} 
-
-.bot-left:before { 
-  top: -1px; 
-  width: 3px; 
-  background-image: -webkit-linear-gradient(transparent, white 60%); 
-  background-image: -moz-linear-gradient(transparent, white 60%); 
-  background-image: -o-linear-gradient(transparent, white 60%); 
-} 
-
-.bot-left:after { 
-  right: -1px; 
-  height: 3px; 
-  background-image: -webkit-linear-gradient(left, white 60%, transparent); 
-  background-image: -moz-linear-gradient(left, white 60%, transparent); 
-  background-image: -o-linear-gradient(left, white 60%, transparent); 
-}
-
 
 .calcButton {
   width: 20px;
@@ -143,41 +90,79 @@ img {
   width: 245px;
 }
 
-.buttonDefaultActive {
-  color: lightslategrey;
+.button {
+  position: relative; 
+  display: inline-block;
+  color: white;
   text-align: center;
   padding: 4px 8px;
   margin: 10px 15px;
-  display: inline-block;
-  transition: all 100ms;  
-}
-
-.slantedActive {
-  -ms-transform: skewX(-18deg) translate(1px, -1px);
-  -webkit-transform: skewX(-18deg) translate(1px, -1px);
-  transform: skewX(-18deg) translate(1px, -1px);
+  -ms-transform: skewX(-20deg);
+  -webkit-transform: skewX(-20deg);
+  transform: skewX(-20deg);
   transition: all 100ms;
 }
 
-.slantedContentActive {
-  -ms-transform: skewX(18deg);
-  -webkit-transform: skewX(18deg);
-  transform: skewX(18deg);  
+.button > * {
   display: inline-block;
-  transition: all 100ms;
+  -ms-transform: skewX(20deg);
+  -webkit-transform: skewX(20deg);
+  transform: skewX(20deg);  
+  transition: all 100ms; 
 }
 
-.active { 
-  position: relative; 
-}
-.active:before, .active:after { 
+.button:before, .button:after { 
   content: ""; 
   position: absolute; 
   bottom: -1px; 
   left: -1px; 
 } 
 
-.active:before { 
+.button:before { 
+  top: -1px; 
+  width: 3px; 
+  background-image: -webkit-linear-gradient(transparent, white 60%); 
+  background-image: -moz-linear-gradient(transparent, white 60%); 
+  background-image: -o-linear-gradient(transparent, white 60%); 
+} 
+
+.button:after { 
+  right: -1px; 
+  height: 3px; 
+  background-image: -webkit-linear-gradient(left, white 60%, transparent); 
+  background-image: -moz-linear-gradient(left, white 60%, transparent); 
+  background-image: -o-linear-gradient(left, white 60%, transparent); 
+}
+
+.buttonActive {
+  position: relative; 
+  display: inline-block;
+  color: lightslategrey;
+  text-align: center;
+  padding: 4px 8px;
+  margin: 10px 15px;
+  -ms-transform: skewX(-18deg) translate(1px, -1px);
+  -webkit-transform: skewX(-18deg) translate(1px, -1px);
+  transform: skewX(-18deg) translate(1px, -1px);
+  transition: all 100ms;  
+}
+
+.buttonActive > * {
+  display: inline-block;
+  -ms-transform: skewX(18deg);
+  -webkit-transform: skewX(18deg);
+  transform: skewX(18deg);  
+  transition: all 100ms;
+}
+
+.buttonActive:before, .buttonActive:after { 
+  content: ""; 
+  position: absolute; 
+  bottom: -1px; 
+  left: -1px; 
+} 
+
+.buttonActive:before { 
   top: -1px; 
   width: 3px; 
   background-image: -webkit-linear-gradient(transparent, lightslategrey 60%);  
@@ -185,7 +170,7 @@ img {
   background-image: -o-linear-gradient(transparent, lightslategrey 60%); 
 } 
 
-.active:after { 
+.buttonActive:after { 
   right: -1px; 
   height: 3px; 
   background-image: -webkit-linear-gradient(left, lightslategrey 60%, transparent); 
@@ -196,7 +181,6 @@ img {
 a:active {
   color: lightslategrey;
 }
-
 
 @media screen and (max-width:550px) {
   #bg img {
