fixed link out to wikipedia page styling, they were not following the tab content correctly

--- a/wikipediaViewer/styles.css
+++ b/wikipediaViewer/styles.css
@@ -207,10 +207,10 @@ iframe {
 }
 
 .visitPage {
-  position: relative;
+  position: fixed;
   margin: 5px;
-  right: 260px;
-  bottom: 45px;
+  right: 10px;
+  bottom: 10px;
 }
 
 #messageContainer {
