--- a/wikipediaViewer/styles.css
+++ b/wikipediaViewer/styles.css
@@ -253,3 +253,9 @@ iframe {
   text-align: center;
   font-size: 1.2rem;
 }
+
+@media only screen and (max-width: 992px) {
+  #messageContainer {
+    margin-top: 25px;
+  }
+}
