--- a/pomodoroTimer/style.css
+++ b/pomodoroTimer/style.css
@@ -47,6 +47,10 @@ html {
   font-size: 1.2rem;
 }
 
+.title > h1 {
+  transition: all 400ms;  
+}
+
 .options {
   background-color: lightseagreen;
 }
@@ -80,7 +84,9 @@ a:active {
 }
 
 img {
-  width: 60px;
-  height: 60px;
+  width: 70px;
+  height: 70px;
   margin: 3px;
+  transition: all 300ms;
+  transition-timing-function: cubic-bezier(0.2, 1.7, 0.58, 1);
 }
