--- a/pomodoroTimer/style.css
+++ b/pomodoroTimer/style.css
@@ -17,6 +17,7 @@ html {
   margin: 10px;
   background-color: #03a9f4;
   text-align: center;
+  border-radius: 1px;
 }
 
 .container {
@@ -38,7 +39,7 @@ html {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  background-color: lightcoral;
+  background-color: rgb(218, 123, 150);
 }
 
 .title {
