--- a/pomodoroTimer/style.css
+++ b/pomodoroTimer/style.css
@@ -54,6 +54,7 @@ html {
   background-color: lightsteelblue;
   min-width: 300px;
   min-height: 80px;
+  max-width: 800px;
 }
 
 .controlsContainer {
