added font and styling for played letters

--- a/ticTacToe/style.css
+++ b/ticTacToe/style.css
@@ -6,6 +6,8 @@ html {
   background: #ffd89b;  /* fallback for old browsers */
   background: -webkit-linear-gradient(to right, #19547b, #ffd89b);  /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to right, #19547b, #ffd89b); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  font-family: 'Lato', sans-serif;
+  letter-spacing: 1px;
 }
 
 body {
@@ -78,6 +80,8 @@ button:active {
   background-color: rgb(3, 187, 190);
   list-style: none;
   cursor: pointer;
+  font-size: 5rem;
+  text-align: center;
 }
 
 #one {
