--- a/ticTacToe/style.css
+++ b/ticTacToe/style.css
@@ -21,7 +21,7 @@ body {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  background-color: darkcyan;
+  background-color: #1d8bcace;
   border-radius: 5px;
   margin: 10px;
   color: white;
@@ -41,10 +41,10 @@ body {
 }
 
 button {
-  font-size: 1.1rem;
+  font-size: 1.2rem;
   width: 150px;
   height: 40px;
-  background-color: rgb(3, 187, 190);
+  background-color: rgb(2, 209, 212);
   border: none;
   border-radius: 5px;
   color: white;
@@ -77,7 +77,7 @@ button:active {
   margin: 0;
   width: 105px;
   height: 105px;
-  background-color: rgb(3, 187, 190);
+  background-color: rgb(2, 209, 212);
   list-style: none;
   cursor: pointer;
   font-size: 5rem;
