--- a/ticTacToe/style.css
+++ b/ticTacToe/style.css
@@ -40,7 +40,7 @@ body {
   height: 70px;
 }
 
-button {
+button, a {
   font-size: 1.2rem;
   width: 150px;
   height: 40px;
@@ -51,14 +51,26 @@ button {
   cursor: pointer;
 }
 
-button:hover {
+button:hover, a:hover {
   -webkit-box-shadow: 2px 3px 2px #757575;
           box-shadow: 2px 3px 2px #757575;
 }
 
-button:active {
+button:active, a:active {
   -webkit-box-shadow: inset 2px 3px 2px #757575;
           box-shadow: inset 2px 3px 2px #757575;
+}
+
+.link {
+  align-self: flex-end;
+  text-decoration: none;
+  font-size: 1rem;
+  width: 220px;
+  height: 26px;
+  padding-top: 2px;
+  margin-right: 20px;
+  white-space: nowrap;
+  text-align: center;
 }
 
 .board {
