--- a/ticTacToe/style.css
+++ b/ticTacToe/style.css
@@ -1,27 +1,45 @@
 * {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 html {
   background: #ffd89b;  /* fallback for old browsers */
   background: -webkit-linear-gradient(to right, #19547b, #ffd89b);
+  background: -webkit-gradient(linear, left top, right top, from(#19547b), to(#ffd89b));
+  background: -webkit-linear-gradient(left, #19547b, #ffd89b);
+  background: -o-linear-gradient(left, #19547b, #ffd89b);
   background: linear-gradient(to right, #19547b, #ffd89b);
   font-family: 'Lato', sans-serif;
   letter-spacing: 1px;
 }
 
 body {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .container {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-around;
-  align-items: center;
-  background-color: #1d8bcace;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: rgba(29, 139, 202, 0.8);
   border-radius: 5px;
   margin: 10px;
   color: white;
@@ -31,21 +49,26 @@ body {
   font-size: 2rem;
   width: 565px;
   height: 125px;
-  align-self: center;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
   font-style: italic;
 }
 
 #message {
+  -webkit-transition: all 200ms;
+  -o-transition: all 200ms;
   transition: all 200ms;
 }
 
 .controls {
-  justify-content: space-evenly;
-  width: 400px;
+  width: 390px;
   height: 70px;
 }
 
 button {
+  -webkit-transition: all 400ms;
+  -o-transition: all 400ms;
   transition: all 400ms;  
 }
 
@@ -71,7 +94,8 @@ button:active, a:active {
 }
 
 .link {
-  align-self: flex-end;
+  -ms-flex-item-align: end;
+      align-self: flex-end;
   text-decoration: none;
   font-size: 1rem;
   width: 220px;
@@ -85,12 +109,18 @@ button:active, a:active {
 .board {
   width: 475px;
   height: 375px;
-  justify-content: center;
-  align-content: center;
-  flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 .boardRow {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
 
@@ -103,6 +133,8 @@ button:active, a:active {
   cursor: pointer;
   font-size: 5rem;
   text-align: center;
+  -webkit-transition: all 200ms;
+  -o-transition: all 200ms;
   transition: all 200ms;    
 }
 
@@ -189,7 +221,10 @@ button:active, a:active {
   }
 
   .controls {
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     width: 210px;
     height: 110px;
   }
